// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: lambdas > explicit lambda with param annotation 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
    ],
    "term": "λx -> 1",
    "type": "Π(x: String) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda with param annotation 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx -> 1",
    "type": "Π(x: ?1) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: (?4 :: Type) -| Γ: x; f)",
      "Num ~~ ?2",
    ],
    "term": "λf => f 1",
    "type": "Π(f: ?1) => (closure: (?4 :: Type) -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "type": "Neutral",
              "value": {
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "handlers": [],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: (?4 :: Type) -| Γ: x; f)",
      "Num ~~ ?2",
    ],
    "term": "λf -> f 1",
    "type": "Π(f: ?1) -> (closure: (?4 :: Type) -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 1,
        "right": {
          "binder": {
            "annotation": {
              "type": "Neutral",
              "value": {
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Lambda",
                    "variable": "f",
                  },
                  "nf": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Lambda",
                      "variable": "f",
                    },
                    "source",
                    {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "handlers": [],
              "implicits": [],
              "metas": {
                "1": {
                  "ann": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "meta": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 1,
                  },
                },
              },
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 4,
              },
            },
            "type": "Closure",
          },
          "type": "Abs",
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "f",
      },
      "body": {
        "arg": {
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "func": {
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "f",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Var",
          "variable": {
            "lvl": 2,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "λx => 1",
    "type": "Π(x: ?1) => (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Implicit",
        "type": "Lambda",
        "variable": "x",
      },
      "body": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "x",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;
